[gd_scene load_steps=9 format=3 uid="uid://kvwa5lh7hoh2"]

[ext_resource type="Texture2D" uid="uid://pw15xmm3fvkr" path="res://assets/ui/kenney_borders/Double/Border/panel-border-000.png" id="1_mh45j"]
[ext_resource type="Script" path="res://src/ui/setting_ui.gd" id="1_qpkih"]
[ext_resource type="FontFile" uid="uid://b21yg3y2byt8f" path="res://assets/fonts/AvQest.ttf" id="2_poo45"]
[ext_resource type="Texture2D" uid="uid://n60adhap0kur" path="res://assets/ui/skull_demon_white.png" id="5_wxsrr"]
[ext_resource type="Texture2D" uid="uid://b1ec430e0iamf" path="res://assets/ui/skull_demon_gray.png" id="6_po8h7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_e176o"]
grow_begin = 0.0
grow_end = 0.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_p814v"]
color = Color(0.556863, 0.556863, 0.556863, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cgqnn"]
color = Color(1, 1, 1, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 5

[node name="SettingUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -292.0
offset_right = 416.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qpkih")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.85098)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mh45j")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 8.0
offset_right = 114.5
offset_bottom = 85.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_poo45")
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="AudioSection" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 88.0
offset_right = -273.0
offset_bottom = 139.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_poo45")
theme_override_font_sizes/font_size = 40
text = "Audio"

[node name="MasterLabel" type="Label" parent="AudioSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_top = 56.0
offset_right = 75.5
offset_bottom = 95.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_poo45")
theme_override_font_sizes/font_size = 30
text = "Master"

[node name="MasterSlider" type="HSlider" parent="AudioSection/MasterLabel"]
layout_mode = 0
offset_left = 120.0
offset_right = 696.0
offset_bottom = 32.0
theme_override_icons/grabber = ExtResource("5_wxsrr")
theme_override_icons/grabber_highlight = ExtResource("5_wxsrr")
theme_override_icons/grabber_disabled = ExtResource("6_po8h7")
theme_override_styles/slider = SubResource("StyleBoxLine_e176o")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_p814v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_cgqnn")
step = 5.0
value = 50.0

[node name="BGMLabel" type="Label" parent="AudioSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_top = 104.0
offset_right = 43.5
offset_bottom = 143.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_poo45")
theme_override_font_sizes/font_size = 30
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="AudioSection/BGMLabel"]
layout_mode = 0
offset_left = 120.0
offset_right = 696.0
offset_bottom = 32.0
theme_override_icons/grabber = ExtResource("5_wxsrr")
theme_override_icons/grabber_highlight = ExtResource("5_wxsrr")
theme_override_icons/grabber_disabled = ExtResource("6_po8h7")
theme_override_styles/slider = SubResource("StyleBoxLine_e176o")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_p814v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_cgqnn")
step = 5.0
value = 50.0

[node name="SFXLabel" type="Label" parent="AudioSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_top = 152.0
offset_right = 43.5
offset_bottom = 191.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_poo45")
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="AudioSection/SFXLabel"]
layout_mode = 0
offset_left = 120.0
offset_right = 696.0
offset_bottom = 32.0
theme_override_icons/grabber = ExtResource("5_wxsrr")
theme_override_icons/grabber_highlight = ExtResource("5_wxsrr")
theme_override_icons/grabber_disabled = ExtResource("6_po8h7")
theme_override_styles/slider = SubResource("StyleBoxLine_e176o")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_p814v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_cgqnn")
step = 5.0
value = 50.0

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -72.0
offset_right = 42.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_poo45")
theme_override_font_sizes/font_size = 30
text = "Close"

[connection signal="mouse_entered" from="AudioSection/MasterLabel/MasterSlider" to="." method="play_ui_hover_sfx"]
[connection signal="value_changed" from="AudioSection/MasterLabel/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="mouse_entered" from="AudioSection/BGMLabel/BGMSlider" to="." method="play_ui_hover_sfx"]
[connection signal="value_changed" from="AudioSection/BGMLabel/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="mouse_entered" from="AudioSection/SFXLabel/SFXSlider" to="." method="play_ui_hover_sfx"]
[connection signal="value_changed" from="AudioSection/SFXLabel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="CloseButton" to="." method="play_ui_hover_sfx"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
